--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
- 
+html{
+    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+}
+
 .navbar{
     display: flex;
+    justify-content: center;
 }
 .center{
     text-align: center;
@@ -27,16 +31,17 @@
 .dark-main div{
     max-width: 500px;
 }
-.grid-wrapper{
+.projects,.learning-resources{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 15px;
     text-align: center;
 }
 
-.grid-wrapper div{
+.projects div{
     border: 2px solid #1f2937;
     border-radius: 5px;
+    border-color: #3882f6;
     padding: 20px;
     font-weight:lighter;
 }
