--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 html{
     font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
 }
+a{
+    text-decoration: none;
+    color: #1f2937;
+}
+a:hover{
+    font-weight: bold;
+
+}
 
 .navbar{
     display: flex;
@@ -40,7 +48,7 @@ html{
 
 .projects div{
     border: 2px solid #1f2937;
-    border-radius: 5px;
+    border-radius: 10px;
     border-color: #3882f6;
     padding: 20px;
     font-weight:lighter;
