--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a:hover{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #1f2937;
+    background-image: linear-gradient(120deg, #155799, #159957);
     color: #f9faf8;
     padding: 80px;
 }
@@ -56,3 +56,4 @@ a:hover{
     padding: 20px;
     font-weight:lighter;
 }
+
