Changed ui to match other pages

--- a/projects/style.css
+++ b/projects/style.css
@@ -45,7 +45,7 @@ img{
 code{
     background-color: #1f2937;
     color: #159915;
-    padding: 10px;
+    padding: 0.5rem;
     border-radius: 10px;
     display: inline;
 }
