--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@ a:hover{
     margin-left: auto;
     align-items: center;
 }
+.page-header{
+    background-color: #159957;
+    background-image: linear-gradient(120deg, #155799, #159957);
+    padding: 1.5rem;
+    text-align: center;
+    color: white;
+}
 .dark-main{
     display: flex;
     justify-content: space-around;
